--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <groupId>com.github.stephenc.eaio-uuid</groupId>
   <artifactId>uuid</artifactId>
   <version>3.4.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
 
   <name>UUID</name>
   <description>An implementation of the UUIDs and GUIDs specification in Java. UUIDs are 128 bit long identifiers that are guaranteed to be unique.</description>
@@ -129,6 +130,11 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.16</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <version>2.5.4</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -139,6 +145,18 @@
           <target>1.5</target>
           <compilerArgument>-g</compilerArgument>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Private-Package>com.eaio.util.lang*</Private-Package>
+            <Export-Package>com.eaio.uuid.*</Export-Package>
+            <Embed-Dependency>*;scope=compile;inline=com/eaio/util/Resource.class</Embed-Dependency>
+          </instructions>
+        </configuration>
+        <extensions>true</extensions>
       </plugin>
     </plugins>
     <extensions>
